# traderjoes

./: .gitignore  LICENSE  Main.hs  Prices.hs  README.md  TraderJoesCom.hs  cron.bash  default.nix  flake.nix  latest-prices.sql  leads.sql  module.nix  query.graphql  schema.sql  style.css  traderjoes.cabal
sql/: latest-prices.sql  price-changes.sql  schema.sql
